--- a/orchestration/package.json
+++ b/orchestration/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "material-table": "^1.36.2",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-datepicker": "^2.5.0",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
