--- a/orchestration/package.json
+++ b/orchestration/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "material-table": "^1.36.2",
     "moment": "^2.24.0",
@@ -10,8 +11,10 @@
     "react-datepicker": "^2.5.0",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
