--- a/orchestration/package.json
+++ b/orchestration/package.json
@@ -12,6 +12,7 @@
     "react-datetime": "^2.16.3",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
+    "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1"
