--- a/orchestration/package.json
+++ b/orchestration/package.json
@@ -15,7 +15,8 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "xml-formatter": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
