--- a/orchestration/package.json
+++ b/orchestration/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "material-table": "^1.36.2",
     "moment": "^2.24.0",
     "react": "^16.8.6",
