--- a/orchestration/package.json
+++ b/orchestration/package.json
@@ -10,10 +10,12 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-datepicker": "^2.5.0",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.8.6",
     "react-dom-factories": "^1.0.2",
+    "react-dropdown-select": "^3.3.1",
     "react-native-material-selectize": "^1.16.0",
     "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
