--- a/orchestration/package.json
+++ b/orchestration/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.8.6",
     "react-dom-factories": "^1.0.2",
     "react-dropdown-select": "^3.3.1",
+    "react-json-pretty": "^2.1.0",
     "react-native-material-selectize": "^1.16.0",
     "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
